Fix page alignment

--- a/style.css
+++ b/style.css
@@ -2,28 +2,29 @@ body {
     background-color: #EB7982;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
-    margin: auto;
+    font-size: 1rem;
 }
 
 li,p {
     display: inline;
 }
 
-div {
-    border: #ce616a;
-    border-style: inset;
+
+.content {
+    max-width: 1140px;
+    margin: auto;
 }
 
 .main-nav__container {
-    width: 100%;
-    height: 100%;
+    max-width: 80rem;
 }
 
 .main-nav__image {
-    width: 100%;
-    height: 100%;
+    max-width: 80rem;
     align-content: center;
     margin-bottom: 0px;
+    border: #ce616a;
+    border-style: inset;
 }
 
 .main-nav__image img {
@@ -34,10 +35,17 @@ div {
 }
 
 .main-nav {
+    max-width: 80rem;
     float: left;
-    flex-direction: row;
     padding: 1rem;
-    border-color: #ce616a;
+    border: #ce616a;
+    border-style: inset;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.main-nav__list {
+    padding: 0%;
 }
 
 .main-nav__item:first-child {
@@ -45,11 +53,9 @@ div {
 }
 
 .main-nav__item {
-    float: flex;
-    flex-direction: row;
     background-color: #21221D;
     align-content: center;
-    padding: 1rem;
+    padding: 1.05rem;
     width: 5rem;
     margin: 0.5rem;
     list-style: none;
